name: GenImplicit
version: 0.1
cabal-version: 1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: (c) hokum
stability: experimental
description:
author: hokum
data-dir: ""

executable GenImplicit
    build-depends: aeson -any, base -any, bytestring -any,
                   containers -any, http-conduit -any 
                   , implicit -any
                   , matrix -any,
                   mtl -any, parsec -any, text -any
    main-is: GenImplicit.hs
    buildable: True
    default-language: Haskell2010
    include-dirs: src
    hs-source-dirs: src
    other-modules: Genimplicit_types 
                   Generation_branch 
                   Cmd_arguments
                   ESCAD_branch
    ghc-options: -O2 -threaded

